--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
+    "@mailchimp/mailchimp_marketing": "^3.0.78",
+    "@sendgrid/mail": "^7.7.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "firebase": "^9.9.3",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
+    "querystring": "^0.2.1",
+    "stream": "^0.0.2",
+    "util": "^0.12.4",
+    "vue": "^2.6.14",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
