--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@sendgrid/mail": "^7.7.0",
     "core-js": "^3.8.3",
     "firebase": "^9.9.3",
+    "jquery": "^3.6.1",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "querystring": "^0.2.1",
     "stream": "^0.0.2",
     "util": "^0.12.4",
     "vue": "^2.6.14",
+    "vue-router": "^2.8.1",
     "webpack": "^5.74.0"
   },
   "devDependencies": {
