--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "querystring": "^0.2.1",
+    "router": "^1.3.7",
     "stream": "^0.0.2",
     "util": "^0.12.4",
     "vue": "^2.6.14",
+    "vue-router": "^2.8.1",
     "webpack": "^5.74.0"
   },
   "devDependencies": {
